hw3/y.output
Grammar

    0 $accept: Program $end

    1 Program: StatementList

    2 StatementList: StatementList Statement
    3              | Statement

    4 Type: TypeName
    5     | ArrayType

    6 TypeName: INT
    7         | FLOAT
    8         | STRING
    9         | BOOL

   10 ArrayType: LBRACK Expression RBRACK Type

   11 Expression: Expression LO B1
   12           | B1

   13 B1: B1 LA B2
   14   | B2

   15 B2: B2 Cmp_op B3
   16   | B3

   17 B3: B3 Add_op B4
   18   | B4

   19 B4: B4 Mul_op UnaryExpr
   20   | UnaryExpr

   21 UnaryExpr: PrimaryExpr
   22          | Unary_op UnaryExpr

   23 LA: LAND

   24 LO: LOR

   25 Cmp_op: EQL
   26       | NEQ
   27       | LSS
   28       | LEQ
   29       | GTR
   30       | GEQ

   31 Add_op: ADD
   32       | SUB

   33 Mul_op: MUL
   34       | DIV
   35       | REM

   36 Unary_op: ADD
   37         | SUB
   38         | NOT

   39 PrimaryExpr: Operand
   40            | IndexExpr
   41            | ConversionExpr

   42 Operand: Literal
   43        | IDENT
   44        | LPAREN Expression RPAREN

   45 Literal: INT_LIT
   46        | FLOAT_LIT
   47        | BOOL_LIT
   48        | STRING_LIT
   49        | TRUE
   50        | FALSE

   51 IndexExpr: PrimaryExpr LBRACK Expression RBRACK

   52 ConversionExpr: Type LPAREN Expression RPAREN

   53 Statement: DeclarationStmt NEWLINE
   54          | SimpleStmt NEWLINE
   55          | Block NEWLINE
   56          | IfStmt NEWLINE
   57          | ForStmt NEWLINE
   58          | PrintStmt NEWLINE
   59          | NEWLINE

   60 SimpleStmt: AssignmentStmt
   61           | Expression
   62           | IncDecStmt

   63 DeclarationStmt: VAR IDENT Type DeclarationAssign

   64 DeclarationAssign: ASSIGN Expression
   65                  | %empty

   66 AssignmentStmt: ExpressionVar Assign_op Expression

   67 ExpressionVar: IndexExpr
   68              | Literal
   69              | IDENT

   70 Assign_op: ASSIGN
   71          | ADD_ASSIGN
   72          | SUB_ASSIGN
   73          | MUL_ASSIGN
   74          | DIV_ASSIGN
   75          | REM_ASSIGN

   76 $@1: %empty

   77 IncDecStmt: ExpressionVar $@1 IncDec

   78 IncDec: INC
   79       | DEC

   80 $@2: %empty

   81 $@3: %empty

   82 Block: LBRACE $@2 StatementList $@3 RBRACE

   83 IfStmt: IfBlock
   84       | IfBlock ELSE IfStmt
   85       | IfBlock ELSE Block

   86 IfCondition: IF Condition

   87 IfBlock: IfCondition Block

   88 Condition: Expression

   89 $@4: %empty

   90 ForStmt: FOR $@4 ForCondition Block

   91 ForCondition: Condition
   92             | ForClause

   93 $@5: %empty

   94 $@6: %empty

   95 $@7: %empty

   96 ForClause: InitStmt SEMICOLON $@5 Condition $@6 SEMICOLON $@7 PosStmt

   97 InitStmt: SimpleStmt

   98 PosStmt: SimpleStmt

   99 PrintStmt: PrintType LPAREN Expression RPAREN

  100 PrintType: PRINT
  101          | PRINTLN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    LPAREN (258) 44 52 99
    RPAREN (259) 44 52 99
    LBRACK (260) 10 51
    RBRACK (261) 10 51
    LBRACE (262) 82
    RBRACE (263) 82
    SEMICOLON (264) 96
    NEWLINE (265) 53 54 55 56 57 58 59
    ADD (266) 31 36
    SUB (267) 32 37
    MUL (268) 33
    DIV (269) 34
    REM (270) 35
    INC (271) 78
    DEC (272) 79
    LSS (273) 27
    GTR (274) 29
    LEQ (275) 28
    GEQ (276) 30
    EQL (277) 25
    NEQ (278) 26
    ASSIGN (279) 64 70
    ADD_ASSIGN (280) 71
    SUB_ASSIGN (281) 72
    MUL_ASSIGN (282) 73
    DIV_ASSIGN (283) 74
    REM_ASSIGN (284) 75
    LAND (285) 23
    LOR (286) 24
    NOT (287) 38
    TRUE (288) 49
    FALSE (289) 50
    IF (290) 86
    ELSE (291) 84 85
    FOR (292) 90
    VAR (293) 63
    PRINT (294) 100
    PRINTLN (295) 101
    IDENT <string> (296) 43 63 69
    INT <string> (297) 6
    FLOAT <string> (298) 7
    BOOL <string> (299) 9
    STRING <string> (300) 8
    INT_LIT <i_val> (301) 45
    FLOAT_LIT <f_val> (302) 46
    STRING_LIT <string> (303) 48
    BOOL_LIT <b_val> (304) 47


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    Program (51)
        on left: 1
        on right: 0
    StatementList (52)
        on left: 2 3
        on right: 1 2 82
    Type <string> (53)
        on left: 4 5
        on right: 10 52 63
    TypeName <string> (54)
        on left: 6 7 8 9
        on right: 4
    ArrayType <string> (55)
        on left: 10
        on right: 5
    Expression <string> (56)
        on left: 11 12
        on right: 10 11 44 51 52 61 64 66 88 99
    B1 <string> (57)
        on left: 13 14
        on right: 11 12 13
    B2 <string> (58)
        on left: 15 16
        on right: 13 14 15
    B3 <string> (59)
        on left: 17 18
        on right: 15 16 17
    B4 <string> (60)
        on left: 19 20
        on right: 17 18 19
    UnaryExpr <string> (61)
        on left: 21 22
        on right: 19 20 22
    LA <string> (62)
        on left: 23
        on right: 13
    LO <string> (63)
        on left: 24
        on right: 11
    Cmp_op <string> (64)
        on left: 25 26 27 28 29 30
        on right: 15
    Add_op <string> (65)
        on left: 31 32
        on right: 17
    Mul_op <string> (66)
        on left: 33 34 35
        on right: 19
    Unary_op <string> (67)
        on left: 36 37 38
        on right: 22
    PrimaryExpr <string> (68)
        on left: 39 40 41
        on right: 21 51
    Operand <string> (69)
        on left: 42 43 44
        on right: 39
    Literal <string> (70)
        on left: 45 46 47 48 49 50
        on right: 42 68
    IndexExpr <string> (71)
        on left: 51
        on right: 40 67
    ConversionExpr <string> (72)
        on left: 52
        on right: 41
    Statement (73)
        on left: 53 54 55 56 57 58 59
        on right: 2 3
    SimpleStmt (74)
        on left: 60 61 62
        on right: 54 97 98
    DeclarationStmt (75)
        on left: 63
        on right: 53
    DeclarationAssign <b_val> (76)
        on left: 64 65
        on right: 63
    AssignmentStmt (77)
        on left: 66
        on right: 60
    ExpressionVar <string> (78)
        on left: 67 68 69
        on right: 66 77
    Assign_op <string> (79)
        on left: 70 71 72 73 74 75
        on right: 66
    IncDecStmt (80)
        on left: 77
        on right: 62
    $@1 (81)
        on left: 76
        on right: 77
    IncDec <string> (82)
        on left: 78 79
        on right: 77
    Block (83)
        on left: 82
        on right: 55 85 87 90
    $@2 (84)
        on left: 80
        on right: 82
    $@3 (85)
        on left: 81
        on right: 82
    IfStmt (86)
        on left: 83 84 85
        on right: 56 84
    IfCondition (87)
        on left: 86
        on right: 87
    IfBlock (88)
        on left: 87
        on right: 83 84 85
    Condition (89)
        on left: 88
        on right: 86 91 96
    ForStmt (90)
        on left: 90
        on right: 57
    $@4 (91)
        on left: 89
        on right: 90
    ForCondition (92)
        on left: 91 92
        on right: 90
    ForClause (93)
        on left: 96
        on right: 92
    $@5 (94)
        on left: 93
        on right: 96
    $@6 (95)
        on left: 94
        on right: 96
    $@7 (96)
        on left: 95
        on right: 96
    InitStmt (97)
        on left: 97
        on right: 96
    PosStmt (98)
        on left: 98
        on right: 96
    PrintStmt (99)
        on left: 99
        on right: 58
    PrintType <string> (100)
        on left: 100 101
        on right: 99


State 0

    0 $accept: . Program $end

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    LBRACE      shift, and go to state 3
    NEWLINE     shift, and go to state 4
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IF          shift, and go to state 10
    FOR         shift, and go to state 11
    VAR         shift, and go to state 12
    PRINT       shift, and go to state 13
    PRINTLN     shift, and go to state 14
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Program          go to state 24
    StatementList    go to state 25
    Type             go to state 26
    TypeName         go to state 27
    ArrayType        go to state 28
    Expression       go to state 29
    B1               go to state 30
    B2               go to state 31
    B3               go to state 32
    B4               go to state 33
    UnaryExpr        go to state 34
    Unary_op         go to state 35
    PrimaryExpr      go to state 36
    Operand          go to state 37
    Literal          go to state 38
    IndexExpr        go to state 39
    ConversionExpr   go to state 40
    Statement        go to state 41
    SimpleStmt       go to state 42
    DeclarationStmt  go to state 43
    AssignmentStmt   go to state 44
    ExpressionVar    go to state 45
    IncDecStmt       go to state 46
    Block            go to state 47
    IfStmt           go to state 48
    IfCondition      go to state 49
    IfBlock          go to state 50
    ForStmt          go to state 51
    PrintStmt        go to state 52
    PrintType        go to state 53


State 1

   44 Operand: LPAREN . Expression RPAREN

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 54
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    Expression      go to state 55
    B1              go to state 30
    B2              go to state 31
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    Literal         go to state 56
    IndexExpr       go to state 57
    ConversionExpr  go to state 40


State 2

   10 ArrayType: LBRACK . Expression RBRACK Type

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 54
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    Expression      go to state 58
    B1              go to state 30
    B2              go to state 31
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    Literal         go to state 56
    IndexExpr       go to state 57
    ConversionExpr  go to state 40


State 3

   82 Block: LBRACE . $@2 StatementList $@3 RBRACE

    $default  reduce using rule 80 ($@2)

    $@2  go to state 59


State 4

   59 Statement: NEWLINE .

    $default  reduce using rule 59 (Statement)


State 5

   36 Unary_op: ADD .

    $default  reduce using rule 36 (Unary_op)


State 6

   37 Unary_op: SUB .

    $default  reduce using rule 37 (Unary_op)


State 7

   38 Unary_op: NOT .

    $default  reduce using rule 38 (Unary_op)


State 8

   49 Literal: TRUE .

    $default  reduce using rule 49 (Literal)


State 9

   50 Literal: FALSE .

    $default  reduce using rule 50 (Literal)


State 10

   86 IfCondition: IF . Condition

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 54
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    Expression      go to state 60
    B1              go to state 30
    B2              go to state 31
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    Literal         go to state 56
    IndexExpr       go to state 57
    ConversionExpr  go to state 40
    Condition       go to state 61


State 11

   90 ForStmt: FOR . $@4 ForCondition Block

    $default  reduce using rule 89 ($@4)

    $@4  go to state 62


State 12

   63 DeclarationStmt: VAR . IDENT Type DeclarationAssign

    IDENT  shift, and go to state 63


State 13

  100 PrintType: PRINT .

    $default  reduce using rule 100 (PrintType)


State 14

  101 PrintType: PRINTLN .

    $default  reduce using rule 101 (PrintType)


State 15

   43 Operand: IDENT .
   69 ExpressionVar: IDENT .

    INC         reduce using rule 69 (ExpressionVar)
    DEC         reduce using rule 69 (ExpressionVar)
    ASSIGN      reduce using rule 69 (ExpressionVar)
    ADD_ASSIGN  reduce using rule 69 (ExpressionVar)
    SUB_ASSIGN  reduce using rule 69 (ExpressionVar)
    MUL_ASSIGN  reduce using rule 69 (ExpressionVar)
    DIV_ASSIGN  reduce using rule 69 (ExpressionVar)
    REM_ASSIGN  reduce using rule 69 (ExpressionVar)
    $default    reduce using rule 43 (Operand)


State 16

    6 TypeName: INT .

    $default  reduce using rule 6 (TypeName)


State 17

    7 TypeName: FLOAT .

    $default  reduce using rule 7 (TypeName)


State 18

    9 TypeName: BOOL .

    $default  reduce using rule 9 (TypeName)


State 19

    8 TypeName: STRING .

    $default  reduce using rule 8 (TypeName)


State 20

   45 Literal: INT_LIT .

    $default  reduce using rule 45 (Literal)


State 21

   46 Literal: FLOAT_LIT .

    $default  reduce using rule 46 (Literal)


State 22

   48 Literal: STRING_LIT .

    $default  reduce using rule 48 (Literal)


State 23

   47 Literal: BOOL_LIT .

    $default  reduce using rule 47 (Literal)


State 24

    0 $accept: Program . $end

    $end  shift, and go to state 64


State 25

    1 Program: StatementList .
    2 StatementList: StatementList . Statement

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    LBRACE      shift, and go to state 3
    NEWLINE     shift, and go to state 4
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IF          shift, and go to state 10
    FOR         shift, and go to state 11
    VAR         shift, and go to state 12
    PRINT       shift, and go to state 13
    PRINTLN     shift, and go to state 14
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    $default  reduce using rule 1 (Program)

    Type             go to state 26
    TypeName         go to state 27
    ArrayType        go to state 28
    Expression       go to state 29
    B1               go to state 30
    B2               go to state 31
    B3               go to state 32
    B4               go to state 33
    UnaryExpr        go to state 34
    Unary_op         go to state 35
    PrimaryExpr      go to state 36
    Operand          go to state 37
    Literal          go to state 38
    IndexExpr        go to state 39
    ConversionExpr   go to state 40
    Statement        go to state 65
    SimpleStmt       go to state 42
    DeclarationStmt  go to state 43
    AssignmentStmt   go to state 44
    ExpressionVar    go to state 45
    IncDecStmt       go to state 46
    Block            go to state 47
    IfStmt           go to state 48
    IfCondition      go to state 49
    IfBlock          go to state 50
    ForStmt          go to state 51
    PrintStmt        go to state 52
    PrintType        go to state 53


State 26

   52 ConversionExpr: Type . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 66


State 27

    4 Type: TypeName .

    $default  reduce using rule 4 (Type)


State 28

    5 Type: ArrayType .

    $default  reduce using rule 5 (Type)


State 29

   11 Expression: Expression . LO B1
   61 SimpleStmt: Expression .

    LOR  shift, and go to state 67

    $default  reduce using rule 61 (SimpleStmt)

    LO  go to state 68


State 30

   12 Expression: B1 .
   13 B1: B1 . LA B2

    LAND  shift, and go to state 69

    $default  reduce using rule 12 (Expression)

    LA  go to state 70


State 31

   14 B1: B2 .
   15 B2: B2 . Cmp_op B3

    LSS  shift, and go to state 71
    GTR  shift, and go to state 72
    LEQ  shift, and go to state 73
    GEQ  shift, and go to state 74
    EQL  shift, and go to state 75
    NEQ  shift, and go to state 76

    $default  reduce using rule 14 (B1)

    Cmp_op  go to state 77


State 32

   16 B2: B3 .
   17 B3: B3 . Add_op B4

    ADD  shift, and go to state 78
    SUB  shift, and go to state 79

    $default  reduce using rule 16 (B2)

    Add_op  go to state 80


State 33

   18 B3: B4 .
   19 B4: B4 . Mul_op UnaryExpr

    MUL  shift, and go to state 81
    DIV  shift, and go to state 82
    REM  shift, and go to state 83

    $default  reduce using rule 18 (B3)

    Mul_op  go to state 84


State 34

   20 B4: UnaryExpr .

    $default  reduce using rule 20 (B4)


State 35

   22 UnaryExpr: Unary_op . UnaryExpr

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 54
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    UnaryExpr       go to state 85
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    Literal         go to state 56
    IndexExpr       go to state 57
    ConversionExpr  go to state 40


State 36

   21 UnaryExpr: PrimaryExpr .
   51 IndexExpr: PrimaryExpr . LBRACK Expression RBRACK

    LBRACK  shift, and go to state 86

    $default  reduce using rule 21 (UnaryExpr)


State 37

   39 PrimaryExpr: Operand .

    $default  reduce using rule 39 (PrimaryExpr)


State 38

   42 Operand: Literal .
   68 ExpressionVar: Literal .

    INC         reduce using rule 68 (ExpressionVar)
    DEC         reduce using rule 68 (ExpressionVar)
    ASSIGN      reduce using rule 68 (ExpressionVar)
    ADD_ASSIGN  reduce using rule 68 (ExpressionVar)
    SUB_ASSIGN  reduce using rule 68 (ExpressionVar)
    MUL_ASSIGN  reduce using rule 68 (ExpressionVar)
    DIV_ASSIGN  reduce using rule 68 (ExpressionVar)
    REM_ASSIGN  reduce using rule 68 (ExpressionVar)
    $default    reduce using rule 42 (Operand)


State 39

   40 PrimaryExpr: IndexExpr .
   67 ExpressionVar: IndexExpr .

    INC         reduce using rule 67 (ExpressionVar)
    DEC         reduce using rule 67 (ExpressionVar)
    ASSIGN      reduce using rule 67 (ExpressionVar)
    ADD_ASSIGN  reduce using rule 67 (ExpressionVar)
    SUB_ASSIGN  reduce using rule 67 (ExpressionVar)
    MUL_ASSIGN  reduce using rule 67 (ExpressionVar)
    DIV_ASSIGN  reduce using rule 67 (ExpressionVar)
    REM_ASSIGN  reduce using rule 67 (ExpressionVar)
    $default    reduce using rule 40 (PrimaryExpr)


State 40

   41 PrimaryExpr: ConversionExpr .

    $default  reduce using rule 41 (PrimaryExpr)


State 41

    3 StatementList: Statement .

    $default  reduce using rule 3 (StatementList)


State 42

   54 Statement: SimpleStmt . NEWLINE

    NEWLINE  shift, and go to state 87


State 43

   53 Statement: DeclarationStmt . NEWLINE

    NEWLINE  shift, and go to state 88


State 44

   60 SimpleStmt: AssignmentStmt .

    $default  reduce using rule 60 (SimpleStmt)


State 45

   66 AssignmentStmt: ExpressionVar . Assign_op Expression
   77 IncDecStmt: ExpressionVar . $@1 IncDec

    ASSIGN      shift, and go to state 89
    ADD_ASSIGN  shift, and go to state 90
    SUB_ASSIGN  shift, and go to state 91
    MUL_ASSIGN  shift, and go to state 92
    DIV_ASSIGN  shift, and go to state 93
    REM_ASSIGN  shift, and go to state 94

    $default  reduce using rule 76 ($@1)

    Assign_op  go to state 95
    $@1        go to state 96


State 46

   62 SimpleStmt: IncDecStmt .

    $default  reduce using rule 62 (SimpleStmt)


State 47

   55 Statement: Block . NEWLINE

    NEWLINE  shift, and go to state 97


State 48

   56 Statement: IfStmt . NEWLINE

    NEWLINE  shift, and go to state 98


State 49

   87 IfBlock: IfCondition . Block

    LBRACE  shift, and go to state 3

    Block  go to state 99


State 50

   83 IfStmt: IfBlock .
   84       | IfBlock . ELSE IfStmt
   85       | IfBlock . ELSE Block

    ELSE  shift, and go to state 100

    $default  reduce using rule 83 (IfStmt)


State 51

   57 Statement: ForStmt . NEWLINE

    NEWLINE  shift, and go to state 101


State 52

   58 Statement: PrintStmt . NEWLINE

    NEWLINE  shift, and go to state 102


State 53

   99 PrintStmt: PrintType . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 103


State 54

   43 Operand: IDENT .

    $default  reduce using rule 43 (Operand)


State 55

   11 Expression: Expression . LO B1
   44 Operand: LPAREN Expression . RPAREN

    RPAREN  shift, and go to state 104
    LOR     shift, and go to state 67

    LO  go to state 68


State 56

   42 Operand: Literal .

    $default  reduce using rule 42 (Operand)


State 57

   40 PrimaryExpr: IndexExpr .

    $default  reduce using rule 40 (PrimaryExpr)


State 58

   10 ArrayType: LBRACK Expression . RBRACK Type
   11 Expression: Expression . LO B1

    RBRACK  shift, and go to state 105
    LOR     shift, and go to state 67

    LO  go to state 68


State 59

   82 Block: LBRACE $@2 . StatementList $@3 RBRACE

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    LBRACE      shift, and go to state 3
    NEWLINE     shift, and go to state 4
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IF          shift, and go to state 10
    FOR         shift, and go to state 11
    VAR         shift, and go to state 12
    PRINT       shift, and go to state 13
    PRINTLN     shift, and go to state 14
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    StatementList    go to state 106
    Type             go to state 26
    TypeName         go to state 27
    ArrayType        go to state 28
    Expression       go to state 29
    B1               go to state 30
    B2               go to state 31
    B3               go to state 32
    B4               go to state 33
    UnaryExpr        go to state 34
    Unary_op         go to state 35
    PrimaryExpr      go to state 36
    Operand          go to state 37
    Literal          go to state 38
    IndexExpr        go to state 39
    ConversionExpr   go to state 40
    Statement        go to state 41
    SimpleStmt       go to state 42
    DeclarationStmt  go to state 43
    AssignmentStmt   go to state 44
    ExpressionVar    go to state 45
    IncDecStmt       go to state 46
    Block            go to state 47
    IfStmt           go to state 48
    IfCondition      go to state 49
    IfBlock          go to state 50
    ForStmt          go to state 51
    PrintStmt        go to state 52
    PrintType        go to state 53


State 60

   11 Expression: Expression . LO B1
   88 Condition: Expression .

    LOR  shift, and go to state 67

    $default  reduce using rule 88 (Condition)

    LO  go to state 68


State 61

   86 IfCondition: IF Condition .

    $default  reduce using rule 86 (IfCondition)


State 62

   90 ForStmt: FOR $@4 . ForCondition Block

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    Expression      go to state 107
    B1              go to state 30
    B2              go to state 31
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    Literal         go to state 38
    IndexExpr       go to state 39
    ConversionExpr  go to state 40
    SimpleStmt      go to state 108
    AssignmentStmt  go to state 44
    ExpressionVar   go to state 45
    IncDecStmt      go to state 46
    Condition       go to state 109
    ForCondition    go to state 110
    ForClause       go to state 111
    InitStmt        go to state 112


State 63

   63 DeclarationStmt: VAR IDENT . Type DeclarationAssign

    LBRACK  shift, and go to state 2
    INT     shift, and go to state 16
    FLOAT   shift, and go to state 17
    BOOL    shift, and go to state 18
    STRING  shift, and go to state 19

    Type       go to state 113
    TypeName   go to state 27
    ArrayType  go to state 28


State 64

    0 $accept: Program $end .

    $default  accept


State 65

    2 StatementList: StatementList Statement .

    $default  reduce using rule 2 (StatementList)


State 66

   52 ConversionExpr: Type LPAREN . Expression RPAREN

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 54
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    Expression      go to state 114
    B1              go to state 30
    B2              go to state 31
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    Literal         go to state 56
    IndexExpr       go to state 57
    ConversionExpr  go to state 40


State 67

   24 LO: LOR .

    $default  reduce using rule 24 (LO)


State 68

   11 Expression: Expression LO . B1

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 54
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    B1              go to state 115
    B2              go to state 31
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    Literal         go to state 56
    IndexExpr       go to state 57
    ConversionExpr  go to state 40


State 69

   23 LA: LAND .

    $default  reduce using rule 23 (LA)


State 70

   13 B1: B1 LA . B2

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 54
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    B2              go to state 116
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    Literal         go to state 56
    IndexExpr       go to state 57
    ConversionExpr  go to state 40


State 71

   27 Cmp_op: LSS .

    $default  reduce using rule 27 (Cmp_op)


State 72

   29 Cmp_op: GTR .

    $default  reduce using rule 29 (Cmp_op)


State 73

   28 Cmp_op: LEQ .

    $default  reduce using rule 28 (Cmp_op)


State 74

   30 Cmp_op: GEQ .

    $default  reduce using rule 30 (Cmp_op)


State 75

   25 Cmp_op: EQL .

    $default  reduce using rule 25 (Cmp_op)


State 76

   26 Cmp_op: NEQ .

    $default  reduce using rule 26 (Cmp_op)


State 77

   15 B2: B2 Cmp_op . B3

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 54
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    B3              go to state 117
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    Literal         go to state 56
    IndexExpr       go to state 57
    ConversionExpr  go to state 40


State 78

   31 Add_op: ADD .

    $default  reduce using rule 31 (Add_op)


State 79

   32 Add_op: SUB .

    $default  reduce using rule 32 (Add_op)


State 80

   17 B3: B3 Add_op . B4
